<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiplication">*</string>
    <string name="_point">,</string>
    <string name="_result">=</string>
    <string name="_division">/</string>
    <string name="Clear">C</string>
    <string name="delete"><![CDATA[<-]]></string>
    <string name="negative">+/-</string>
    <string name="_return">Return</string>
    <string name="_settings">settings</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
</resources>