<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <Button
        android:id="@+id/button_return"
        android:layout_width="211dp"
        android:layout_height="37dp"
        android:text="@string/_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/radio_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onThemeClickLight"
            android:text="@string/light_theme" />

        <RadioButton
            android:id="@+id/radio_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onThemeClickDark"
            android:text="@string/dark_theme" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>